Apps/mkvtoolnix/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mkvtoolnix
  name: mkvtoolnix-service
  namespace: mkvtoolnix
spec:
  ports:
    - name: "3000"
      port: 80
      targetPort: 5800
  selector:
    app: mkvtoolnix
